fix to spacing on home page

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
 :root {
   --top-header-height: 56px;
   --section-header-height: 36px;
-  --section-content-height: 280px;
+  --section-content-height: 272px;
   --section-total-height: calc(var(--section-header-height) + var(--section-content-height) + 1px);
   --sidebar-open-width: 188px;
   --sidebar-collapsed-width: 56px;
